# rpc

./: CMakeLists.txt  README.md
cmake_modules/: FindGFlags.cmake  FindGLog.cmake  FindLibEv.cmake  FindZooKeeper.cmake
conf/: zk.conf
example/: CMakeLists.txt  client.cc  my_conn.cc  my_conn.h  my_dispatch_server.cc  mydispatch_srv.cc
kudu/gutil/: CMakeLists.txt  arm_instruction_set_select.h  atomic_refcount.h  atomicops-internals-macosx.h  atomicops-internals-powerpc.h  atomicops-internals-tsan.h  atomicops-internals-x86.cc  atomicops-internals-x86.h  atomicops.h  basictypes.h  bind.h  bind.h.pump  bind_helpers.h  bind_internal.h  bind_internal.h.pump  bits.cc  bits.h  callback.h  callback.h.pump  callback_forward.h  callback_internal.cc  callback_internal.h  casts.h  charmap.h  cpu.cc  cycleclock-inl.h  dynamic_annotations.c  dynamic_annotations.h  endian.h  fixedarray.h  gscoped_ptr.h  int128.cc  int128.h  integral_types.h  linux_syscall_support.h  logging-inl.h  macros.h  manual_constructor.h  map-util.h  mathlimits.cc  (+31 more)
kudu/gutil/auxiliary/: atomicops-internals-arm-generic.h  atomicops-internals-arm-v6plus.h  atomicops-internals-windows.h
kudu/gutil/hash/: builtin_type_hash.h  city.cc  city.h  hash.cc  hash.h  hash128to64.h  jenkins.cc  jenkins.h  jenkins_lookup2.h  legacy_hash.h  string_hash.h
kudu/gutil/strings/: ascii_ctype.cc  ascii_ctype.h  charset.cc  charset.h  escaping.cc  escaping.h  fastmem.h  human_readable.cc  human_readable.h  join.cc  join.h  memutil.cc  memutil.h  numbers-test.cc  numbers.cc  numbers.h  serialize.cc  serialize.h  split.cc  split.h  split_internal.h  strcat.cc  strcat.h  string_util-test.cc  stringpiece.cc  stringpiece.h  strip.cc  strip.h  substitute.cc  substitute.h  util.cc  util.h
kudu/gutil/threading/: thread_collision_warner.cc  thread_collision_warner.h
kudu/gutil/utf/: LICENSE  rune.c  utf.h
kudu/rpc/: CMakeLists.txt  connection.cc  connection.h  connection_id.cc  connection_id.h  constants.cc  constants.h  messenger.cc  messenger.h  negotiation.cc  negotiation.h  outbound_call.cc  outbound_call.h  proxy.cc  proxy.h  reactor.cc  reactor.h  remote_method.cc  remote_method.h  response_callback.h  rpc_controller.cc  rpc_controller.h  serialization.cc  transfer.cc
kudu/util/: CMakeLists.txt  array_view.h  atomic.cc  atomic.h  condition_variable.cc  condition_variable.h  countdown_latch.h  env.cc  env.h  errno.cc  errno.h  faststring.cc  faststring.h  flag_tags.cc  flag_tags.h  locks.cc  locks.h  malloc.cc  malloc.h  monotime.cc  monotime.h  mutex.cc  mutex.h  os-util.cc  os-util.h  path_util.cc  path_util.h  random.h  random_util.cc  random_util.h  rw_mutex.cc  rw_mutex.h  rw_semaphore.h  scoped_cleanup.h  semaphore.cc  semaphore.h  signal.cc  signal.h  slice.cc  slice.h  (+6 more)
kudu/util/debug/: leak_annotations.h  leakcheck_disabler.h  sanitizer_scopes.h  trace_event.h  trace_event_impl.cc  trace_event_impl.h  trace_event_impl_constants.cc  trace_event_memory.h  trace_event_synthetic_delay.cc  trace_event_synthetic_delay.h  trace_logging.h  unwind_safeness.cc  unwind_safeness.h
kudu/util/net/: net_util-test.cc  net_util.cc  net_util.h  sockaddr.cc  sockaddr.h  socket.cc  socket.h
proto/: myproto.proto  rpc_header.proto  zk.proto
zk/: CMakeLists.txt  register.cc  register.cc.bak  register.h  subscriber.cc  subscriber.h  util.cc  util.h
