PROJECT(TEST_KUDU)

SET(SRC_LIST_SERVER mydispatch_srv.cc my_conn.cc)
SET(SRC_LIST_CLIENT client.cc)

ADD_EXECUTABLE(server ${PROTO_SRCS} ${SRC_LIST_SERVER})
ADD_EXECUTABLE(client ${PROTO_SRCS} ${SRC_LIST_CLIENT})

TARGET_LINK_LIBRARIES(server ${STATIC_LIB} ${DYNAMIC_LIB})
TARGET_LINK_LIBRARIES(client krpc ${STATIC_LIB} ${DYNAMIC_LIB})
