PROJECT(TEST_KUDU)

SET(SRC_LIST_SERVER my_dispatch_server.cc my_conn.cc)
SET(SRC_LIST_CLIENT client.cc)

ADD_EXECUTABLE(server ${PROTO_SRCS} ${SRC_LIST_SERVER})
ADD_EXECUTABLE(client ${PROTO_SRCS} ${SRC_LIST_CLIENT})

TARGET_LINK_LIBRARIES(server service ${STATIC_LIB} ${DYNAMIC_LIB})
TARGET_LINK_LIBRARIES(client service krpc ${STATIC_LIB} ${DYNAMIC_LIB})
